--- a/package.json
+++ b/package.json
@@ -3,14 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --webpack",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.1",
+    "@monaco-editor/react": "^4.7.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "copy-to-clipboard": "^3.3.3",
+    "file-loader": "^6.2.0",
+    "glslify-loader": "^2.0.0",
+    "md5": "^2.3.0",
+    "moment": "^2.30.1",
     "next": "16.1.1",
+    "open-in-editor": "^2.2.0",
+    "raw-loader": "^4.0.2",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0",
+    "slugify": "^1.6.6",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
