--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "open-in-editor": "^2.2.0",
     "raw-loader": "^4.0.2",
     "react": "19.2.3",
+    "react-colorful": "^5.6.1",
     "react-dom": "19.2.3",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
